Update to .NET Core v3.0.0-preview7.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,6 +18,8 @@
     <Deterministic>true</Deterministic>
     <EmbedAllSources>true</EmbedAllSources>
     <LangVersion>preview</LangVersion>
+    <Nullable>enable</Nullable>
+    <NullableContextOptions>enable</NullableContextOptions> <!-- TODO: Remove. -->
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup>
