--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ build_script:
           $ErrorActionPreference = "Stop"
           Set-StrictMode -Version 2.0
           markdownlint *.md
+          dotnet tool restore
           dotnet build -c $Env:CONFIGURATION
           dotnet pack -c $Env:CONFIGURATION
           $rids =
