--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -25,6 +25,9 @@
       <PrivateAssets>all</PrivateAssets>
       <Version>1.0.0-beta2-19367-01</Version>
     </PackageReference>
+    <PackageReference Include="Nett">
+      <Version>0.13.0</Version>
+    </PackageReference>
     <PackageReference Include="System.CommandLine.Rendering">
       <Version>0.3.0-alpha.19317.1</Version>
     </PackageReference>
