--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ build_script:
           Set-StrictMode -Version 2.0
           markdownlint *.md
           dotnet tool restore
+          dotnet tool run t4 src/lib/Syntax/SyntaxTree.tt
           dotnet build -c $Env:CONFIGURATION
           dotnet pack -c $Env:CONFIGURATION
           $rids =
