--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -28,6 +28,9 @@
     <PackageReference Include="Nett">
       <Version>0.13.0</Version>
     </PackageReference>
+    <PackageReference Include="ReadLine">
+      <Version>2.0.1</Version>
+    </PackageReference>
     <PackageReference Include="System.CommandLine.Rendering">
       <Version>0.3.0-alpha.19317.1</Version>
     </PackageReference>
