--- a/src/lib/lib.csproj
+++ b/src/lib/lib.csproj
@@ -13,6 +13,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\core\src\**\*.fl">
+      <LogicalName>%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub">
       <PrivateAssets>all</PrivateAssets>
       <Version>1.0.0-beta2-19367-01</Version>
