--- a/src/tests/tests.csproj
+++ b/src/tests/tests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <AssemblyName>flare-tests</AssemblyName>
+    <AssemblyName>flare-tests.TestAdapter</AssemblyName>
     <RootNamespace>Flare.Tests</RootNamespace>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
@@ -9,7 +9,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>16.2.0</Version>
+      <Version>16.3.0-preview-20190808-03</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
+      <Version>16.3.0-preview-20190808-03</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.1</Version>
