Add Appveyor.TestLogger package reference and use it on AppVeyor.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,4 +45,4 @@ test_script:
     - pwsh: |
           $ErrorActionPreference = "Stop"
           Set-StrictMode -Version 2.0
-          dotnet test -c $Env:CONFIGURATION
+          dotnet test -c $Env:CONFIGURATION -l Appveyor
