--- a/src/tests/tests.csproj
+++ b/src/tests/tests.csproj
@@ -8,6 +8,9 @@
     <ProjectReference Include="..\cli\cli.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Appveyor.TestLogger">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
       <Version>16.3.0-preview-20190808-03</Version>
     </PackageReference>
