--- a/src/tests/tests.csproj
+++ b/src/tests/tests.csproj
@@ -14,6 +14,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk">
       <Version>16.3.0-preview-20190808-03</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub">
+      <PrivateAssets>all</PrivateAssets>
+      <Version>1.0.0-beta2-19367-01</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
       <Version>16.3.0-preview-20190808-03</Version>
     </PackageReference>
