--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 .vs
 .vscode
 /src/*/bin
+/src/*/dep
 /src/*/obj
 /src/*/TestResults
 /src/lib/Syntax/SyntaxTree.cs
+/src/tests/project/*/bin
+/src/tests/project/*/dep
