--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # Reference: https://help.github.com/en/articles/displaying-a-sponsor-button-in-your-repository
 
-custom: https://liberapay.com/flare-lang/donate
+liberapay: flare-lang
