--- a/src/tests/tests.csproj
+++ b/src/tests/tests.csproj
@@ -12,14 +12,14 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
-      <Version>16.3.0-preview-20190808-03</Version>
+      <Version>16.3.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.SourceLink.GitHub">
       <PrivateAssets>all</PrivateAssets>
       <Version>1.0.0-beta2-19367-01</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
-      <Version>16.3.0-preview-20190808-03</Version>
+      <Version>16.3.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.1</Version>
