--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # Reference: https://help.github.com/en/articles/displaying-a-sponsor-button-in-your-repository
 
-liberapay: flare-lang
+github: [alexrp]
