--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,34 +1,69 @@
 <Project>
-  <PropertyGroup>
-    <Company>Alex Rønne Petersen</Company>
-    <Copyright>ISC License (No Attribution)</Copyright>
-    <Description>A dynamic programming language suitable for embedding.</Description>
-    <Product>Flare</Product>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyVersion>0.1.0</AssemblyVersion>
-    <FileVersion>0.1.0</FileVersion>
-    <Version>0.1.0</Version>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <ContinuousIntegrationBuild Condition="'$(CI)' == 'True'">true</ContinuousIntegrationBuild>
-    <DebugType>portable</DebugType>
-    <Deterministic>true</Deterministic>
-    <EmbedAllSources>true</EmbedAllSources>
-    <LangVersion>preview</LangVersion>
-    <Nullable>enable</Nullable>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-  </PropertyGroup>
-  <PropertyGroup>
-    <Authors>$(Company)</Authors>
-    <IncludeSource>true</IncludeSource>
-    <IncludeSymbolsInSingleFile>true</IncludeSymbolsInSingleFile>
-    <IsPackable>false</IsPackable>
-    <IsPublishable>false</IsPublishable>
-    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-  </PropertyGroup>
+    <PropertyGroup>
+        <Company>Alex Rønne Petersen</Company>
+        <Copyright>ISC License (No Attribution)</Copyright>
+        <Description>A dynamic programming language suitable for embedding.</Description>
+        <Product>Flare</Product>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <AssemblyVersion>0.1.0</AssemblyVersion>
+        <FileVersion>0.1.0</FileVersion>
+        <Version>0.1.0</Version>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <ContinuousIntegrationBuild Condition="'$(CI)' == 'true'">true</ContinuousIntegrationBuild>
+        <DebugType>portable</DebugType>
+        <Deterministic>true</Deterministic>
+        <EmbedAllSources>true</EmbedAllSources>
+        <LangVersion>preview</LangVersion>
+        <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
+        <Nullable>enable</Nullable>
+        <SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <Authors>$(Company)</Authors>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSource>true</IncludeSource>
+        <IncludeSymbolsInSingleFile>true</IncludeSymbolsInSingleFile>
+        <IsPackable>false</IsPackable>
+        <IsPublishable>false</IsPublishable>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <MicrosoftCodeAnalysisFxCopAnalyzersVersion>3.3.0</MicrosoftCodeAnalysisFxCopAnalyzersVersion>
+        <MicrosoftNETTestSdkVersion>16.8.0-preview-20200812-03</MicrosoftNETTestSdkVersion>
+        <MicrosoftSourceLinkGitHubVersion>1.1.0-beta-20204-02</MicrosoftSourceLinkGitHubVersion>
+        <MicrosoftTestPlatformObjectModelVersion>16.8.0-preview-20200812-03</MicrosoftTestPlatformObjectModelVersion>
+        <NettVersion>0.15.0</NettVersion>
+        <NuGetVersioningVersion>5.8.0-preview.2.6776</NuGetVersioningVersion>
+        <ReadLineVersion>2.0.1</ReadLineVersion>
+        <StyleCopAnalyzersVersion>1.2.0-beta.205</StyleCopAnalyzersVersion>
+        <SystemCommandLineRenderingVersion>0.3.0-alpha.20427.1</SystemCommandLineRenderingVersion>
+        <xunitVersion>2.4.1</xunitVersion>
+        <xunitrunnervisualstudioVersion>2.4.3</xunitrunnervisualstudioVersion>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
+            <Version>$(MicrosoftCodeAnalysisFxCopAnalyzersVersion)</Version>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.SourceLink.GitHub">
+            <Version>$(MicrosoftSourceLinkGitHubVersion)</Version>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="StyleCop.Analyzers">
+            <Version>$(StyleCopAnalyzersVersion)</Version>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+    </ItemGroup>
 </Project>
