--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -1,45 +1,45 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <ApplicationIcon>..\..\Flare.ico</ApplicationIcon>
-    <AssemblyName>flare</AssemblyName>
-    <IncludeSource>false</IncludeSource>
-    <IsPackable>true</IsPackable>
-    <IsPublishable>true</IsPublishable>
-    <OutputType>Exe</OutputType>
-    <PackAsTool>true</PackAsTool>
-    <RootNamespace>Flare.Cli</RootNamespace>
-    <ServerGarbageCollection>true</ServerGarbageCollection>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Include="..\..\LICENSE.md; ..\..\README.md">
-      <Pack>true</Pack>
-      <PackagePath>%(Filename)%(Extension)</PackagePath>
-      <Visible>true</Visible>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\lib\lib.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub">
-      <PrivateAssets>all</PrivateAssets>
-      <Version>1.0.0-beta2-19367-01</Version>
-    </PackageReference>
-    <PackageReference Include="Nett">
-      <Version>0.13.0</Version>
-    </PackageReference>
-    <PackageReference Include="NuGet.Versioning">
-      <Version>5.3.1</Version>
-    </PackageReference>
-    <PackageReference Include="ReadLine">
-      <Version>2.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.CommandLine.Rendering">
-      <Version>0.3.0-alpha.19405.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Target AfterTargets="Publish" Condition="'$(PublishSingleFile)' == 'true'" Name="ZipSingleFile">
-    <ZipDirectory DestinationFile="$(PublishDir)..\$(Product).$(Version).$(RuntimeIdentifier).zip" Overwrite="true" SourceDirectory="$(PublishDir)" />
-  </Target>
+    <PropertyGroup>
+        <ApplicationIcon>..\..\Flare.ico</ApplicationIcon>
+        <AssemblyName>flare</AssemblyName>
+        <IncludeSource>false</IncludeSource>
+        <IsPackable>true</IsPackable>
+        <IsPublishable>true</IsPublishable>
+        <OutputType>Exe</OutputType>
+        <PackAsTool>true</PackAsTool>
+        <RootNamespace>Flare.Cli</RootNamespace>
+        <ServerGarbageCollection>true</ServerGarbageCollection>
+        <TargetFramework>net5.0</TargetFramework>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\..\LICENSE.md; ..\..\README.md">
+            <Pack>true</Pack>
+            <PackagePath>%(Filename)%(Extension)</PackagePath>
+            <Visible>true</Visible>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\lib\lib.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Nett">
+            <Version>$(NettVersion)</Version>
+        </PackageReference>
+        <PackageReference Include="NuGet.Versioning">
+            <Version>$(NuGetVersioningVersion)</Version>
+        </PackageReference>
+        <PackageReference Include="ReadLine">
+            <Version>$(ReadLineVersion)</Version>
+        </PackageReference>
+        <PackageReference Include="System.CommandLine.Rendering">
+            <Version>$(SystemCommandLineRenderingVersion)</Version>
+        </PackageReference>
+    </ItemGroup>
+
+    <Target AfterTargets="Publish" Condition="'$(PublishSingleFile)' == 'true'" Name="ZipSingleFile">
+        <ZipDirectory DestinationFile="$(PublishDir)..\$(Product).$(Version).$(RuntimeIdentifier).zip" Overwrite="true" SourceDirectory="$(PublishDir)" />
+    </Target>
 </Project>
