--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,9 @@ defaults:
     run:
         shell: bash
 env:
-    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
     DOTNET_CLI_TELEMETRY_OPTOUT: true
+    DOTNET_NOLOGO: true
+    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 jobs:
     ci:
         strategy:
@@ -31,7 +32,11 @@ jobs:
               uses: actions/checkout@v2.3.2
             - name: Set up Node.js
               uses: actions/setup-node@v1.4.3
-            - name: Set up .NET Core
+            - name: Set up .NET Core 2.1
+              uses: actions/setup-dotnet@v1.6.0
+              with:
+                  dotnet-version: 2.1.809
+            - name: Set up .NET 5.0
               uses: actions/setup-dotnet@v1.6.0
               with:
                   dotnet-version: 5.0.100-preview.8.20417.9
