--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ defaults:
 env:
     DOTNET_CLI_TELEMETRY_OPTOUT: true
     DOTNET_NOLOGO: true
-    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 jobs:
     ci:
         strategy:
@@ -32,11 +31,7 @@ jobs:
               uses: actions/checkout@v2.3.2
             - name: Set up Node.js
               uses: actions/setup-node@v1.4.3
-            - name: Set up .NET Core 2.1
-              uses: actions/setup-dotnet@v1.6.0
-              with:
-                  dotnet-version: 2.1.809
-            - name: Set up .NET 5.0
+            - name: Set up .NET
               uses: actions/setup-dotnet@v1.6.0
               with:
                   dotnet-version: 5.0.100-preview.8.20417.9
@@ -50,7 +45,7 @@ jobs:
                   markdownlint *.md
             - name: Build project
               run: |
-                  dotnet t4 src/lib/Syntax/SyntaxTree.tt
+                  DOTNET_ROLL_FORWARD=LatestMajor dotnet t4 src/lib/Syntax/SyntaxTree.tt
                   dotnet build -c ${{ matrix.configuration }} --no-restore
             - name: Pack project
               run: |
