--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
                 os:
                     - macos-latest
                     - ubuntu-latest
-                    - macos-latest
+                    - windows-latest
                 configuration:
                     - Debug
                     - Release
