--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
                       dotnet publish -c Release -r $rid -p:PublishSingleFile=true
                   done
             - name: Upload NuGet packages
+              if: github.repository == 'flare-lang/flare'
               run: |
                   dotnet nuget push src/*/bin/Release/*.{nupkg,snupkg} -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
             - name: Upload GitHub packages
