--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
             - uses: xt0rted/markdownlint-problem-matcher@v1
             - name: Clone repository
               uses: actions/checkout@v2.3.2
+              with:
+                  fetch-depth: 0
             - name: Set up Node.js
               uses: actions/setup-node@v1.4.3
             - name: Set up .NET
