--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         steps:
             - name: Clone repository
               uses: actions/checkout@v2.3.2
+              with:
+                  fetch-depth: 0
             - name: Set up .NET
               uses: actions/setup-dotnet@v1.6.0
               with:
