Use <InternalsVisibleTo /> to expose stuff to the tests project.

--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -13,6 +13,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <InternalsVisibleTo Include="flare-tests.TestAdapter" />
+    </ItemGroup>
+
+    <ItemGroup>
         <None Include="..\..\LICENSE.md; ..\..\README.md">
             <Pack>true</Pack>
             <PackagePath>%(Filename)%(Extension)</PackagePath>
