--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,2 +1,51 @@
 <Project>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" />
+        <PackageReference Include="Nerdbank.GitVersioning" />
+        <PackageReference Include="StyleCop.Analyzers" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Update="Microsoft.CodeAnalysis.FxCopAnalyzers">
+            <Version>3.3.0</Version>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Update="Microsoft.NET.Test.Sdk">
+            <Version>16.8.0-preview-20200812-03</Version>
+        </PackageReference>
+        <PackageReference Update="Microsoft.SourceLink.GitHub">
+            <Version>1.1.0-beta-20204-02</Version>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Update="Microsoft.TestPlatform.ObjectModel">
+            <Version>16.8.0-preview-20200812-03</Version>
+        </PackageReference>
+        <PackageReference Update="Nerdbank.GitVersioning">
+            <Version>3.2.31</Version>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Update="Nett">
+            <Version>0.15.0</Version>
+        </PackageReference>
+        <PackageReference Update="NuGet.Versioning">
+            <Version>5.8.0-preview.2.6776</Version>
+        </PackageReference>
+        <PackageReference Update="ReadLine">
+            <Version>2.0.1</Version>
+        </PackageReference>
+        <PackageReference Update="StyleCop.Analyzers">
+            <Version>1.2.0-beta.205</Version>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Update="System.CommandLine.Rendering">
+            <Version>0.3.0-alpha.20427.1</Version>
+        </PackageReference>
+        <PackageReference Update="xunit">
+            <Version>2.4.1</Version>
+        </PackageReference>
+        <PackageReference Update="xunit.runner.visualstudio">
+            <Version>2.4.3</Version>
+        </PackageReference>
+    </ItemGroup>
 </Project>
