Switch from T4 to C# source generators for AST code generation.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,7 +11,6 @@
         "GitHub.vscode-pull-request-github",
         "hashhar.gitattributes",
         "ms-dotnettools.csharp",
-        "redhat.vscode-yaml",
-        "zbecknell.t4-support"
+        "redhat.vscode-yaml"
     ]
 }
