--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -7,6 +7,7 @@
         <IsPublishable>true</IsPublishable>
         <OutputType>Exe</OutputType>
         <PackAsTool>true</PackAsTool>
+        <RollForward>LatestMajor</RollForward>
         <RootNamespace>Flare.Cli</RootNamespace>
         <ServerGarbageCollection>true</ServerGarbageCollection>
         <TargetFramework>net5.0</TargetFramework>
