--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
             - name: Upload GitHub packages
               if: github.repository == 'flare-lang/flare'
               run: |
-                  DOTNET_ROLL_FORWARD=LatestMajor dotnet gpr push src/*/bin/Release/*.nupkg -k ${{ secrets.GITHUB_TOKEN }}
+                  dotnet gpr push src/*/bin/Release/*.nupkg -k ${{ secrets.GITHUB_TOKEN }}
             - name: Upload NuGet packages
               if: github.repository == 'flare-lang/flare'
               run: |
