--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "DotJoshJohnson.xml",
         "EditorConfig.EditorConfig",
         "fernandoescolar.vscode-solution-explorer",
+        "formulahendry.dotnet-test-explorer",
         "GitHub.vscode-pull-request-github",
         "hashhar.gitattributes",
         "ms-dotnettools.csharp",
