Changes to make .NET Core Test Explorer extension detect tests properly.

--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -14,7 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="flare-tests.TestAdapter" />
+        <InternalsVisibleTo Include="Flare.Tests.TestAdapter" />
     </ItemGroup>
 
     <ItemGroup>
