--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,14 @@ jobs:
                   fetch-depth: 0
             - name: Set up Node.js
               uses: actions/setup-node@v1.4.3
+            - name: Extract .NET version
+              id: dotnet
+              run: |
+                  echo ::set-output name=version::$(tail -n +2 global.json | jq .sdk.version -r)
             - name: Set up .NET
               uses: actions/setup-dotnet@v1.6.0
               with:
-                  dotnet-version: 5.0.100-preview.8.20417.9
+                  dotnet-version: ${{ steps.dotnet.outputs.version }}
             - name: Install dependencies
               run: |
                   npm install markdownlint-cli@0.23.2 -g
