--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,14 @@ jobs:
               uses: actions/checkout@v2.3.2
               with:
                   fetch-depth: 0
+            - name: Extract .NET version
+              id: dotnet
+              run: |
+                  echo ::set-output name=version::$(tail -n +2 global.json | jq .sdk.version -r)
             - name: Set up .NET
               uses: actions/setup-dotnet@v1.6.0
               with:
-                  dotnet-version: 5.0.100-preview.8.20417.9
+                  dotnet-version: ${{ steps.dotnet.outputs.version }}
             - name: Install dependencies
               run: |
                   dotnet tool restore
