--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,7 @@ jobs:
                   dotnet pack -c Release --no-build
             - name: Publish project
               run: |
-                  rids="linux-arm linux-arm64 linux-x64 osx-x64 win-arm win-arm64 win-x64 win-x86"
-                  for rid in $rids; do
+                  for rid in $(jq .[] runtimes.json -r); do
                       dotnet publish -c Release -r $rid -p:PublishSingleFile=true
                   done
             - name: Upload GitHub packages
