--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         runs-on: windows-latest
         steps:
             - name: Clone repository
-              uses: actions/checkout@v2.3.2
+              uses: actions/checkout@v2.3.4
               with:
                   fetch-depth: 0
             - name: Extract .NET version
@@ -24,7 +24,7 @@ jobs:
               run: |
                   echo ::set-output name=version::$(tail -n +2 global.json | jq .sdk.version -r)
             - name: Set up .NET
-              uses: actions/setup-dotnet@v1.6.0
+              uses: actions/setup-dotnet@v1.7.2
               with:
                   dotnet-version: ${{ steps.dotnet.outputs.version }}
             - name: Install dependencies
@@ -48,7 +48,7 @@ jobs:
               run: |
                   dotnet nuget push src/*/bin/Release/*.{nupkg,snupkg} -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
             - name: Upload GitHub release
-              uses: svenstaro/upload-release-action@v2
+              uses: svenstaro/upload-release-action@2.2.0
               with:
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
                   tag: ${{ github.ref }}
