--- a/.editorconfig
+++ b/.editorconfig
@@ -108,10 +108,12 @@ dotnet_style_require_accessibility_modifiers = omit_if_default : error
 
 # Reference: https://docs.microsoft.com/en-us/visualstudio/code-quality/code-analysis-warnings-for-managed-code-by-checkid
 [*.cs]
+dotnet_diagnostic.CA1014.severity = none # TODO: Remove attributes when possible.
 dotnet_diagnostic.CA1032.severity = none
 dotnet_diagnostic.CA1062.severity = none
 dotnet_diagnostic.CA1065.severity = none
 dotnet_diagnostic.CA1303.severity = none
+dotnet_diagnostic.CA1711.severity = none
 dotnet_diagnostic.CA1716.severity = none
 dotnet_diagnostic.CA1724.severity = none
 dotnet_diagnostic.CA1810.severity = none
