--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -7,53 +7,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" />
-        <PackageReference Include="Nerdbank.GitVersioning" />
-        <PackageReference Include="StyleCop.Analyzers" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Update="BenchmarkDotNet">
-            <Version>0.12.1</Version>
-        </PackageReference>
-        <PackageReference Update="Microsoft.CodeAnalysis">
-            <Version>3.8.0</Version>
-        </PackageReference>
-        <PackageReference Update="Microsoft.NET.Test.Sdk">
-            <Version>16.8.3</Version>
-        </PackageReference>
-        <PackageReference Update="Microsoft.SourceLink.GitHub">
-            <Version>1.1.0-beta-20204-02</Version>
+        <PackageReference Include="Microsoft.SourceLink.GitHub">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Update="Microsoft.TestPlatform.ObjectModel">
-            <Version>16.8.3</Version>
-        </PackageReference>
-        <PackageReference Update="Nerdbank.GitVersioning">
-            <Version>3.3.37</Version>
+        <PackageReference Include="Nerdbank.GitVersioning">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Update="Nett">
-            <Version>0.15.0</Version>
-        </PackageReference>
-        <PackageReference Update="NuGet.Versioning">
-            <Version>5.8.0</Version>
-        </PackageReference>
-        <PackageReference Update="ReadLine">
-            <Version>2.0.1</Version>
-        </PackageReference>
-        <PackageReference Update="StyleCop.Analyzers">
-            <Version>1.2.0-beta.312</Version>
+        <PackageReference Include="StyleCop.Analyzers">
             <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Update="System.CommandLine">
-            <Version>2.0.0-beta1.20574.7</Version>
-        </PackageReference>
-        <PackageReference Update="xunit">
-            <Version>2.4.1</Version>
-        </PackageReference>
-        <PackageReference Update="xunit.runner.visualstudio">
-            <Version>2.4.3</Version>
         </PackageReference>
     </ItemGroup>
 </Project>
